<resources>
    <string name="app_name">WowMeet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="login_register_email_hint">Email</string>
    <string name="login_register_password_hint">Password</string>
    <string name="login_register_username_hint">Username</string>
    <string name="activity_name_register">Register</string>

    <string-array name="drawer_options_array">
        <item>Home</item>
        <item>Messages</item>
        <item>Log Out</item>
    </string-array>

    <string-array name="event_types_array">
        <item>Gezme</item>
        <item>Tozma</item>
        <item>Alışveriş</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_event_place_hint">Where would you like to go?</string>
    <string name="when">When</string>
    <string name="time">Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="create_event_activity_type_hint">What do you want to do?</string>
    <string name="next">Next</string>
    <string name="place_filter_hint">Where do you want to hang out?</string>
    <string name="starting_hour">Starting Hour:</string>
    <string name="ending_hour">Ending Hour:</string>
    <string name="ok">OK</string>
    <string name="filter">Filter</string>
    <string name="radius">Radius:</string>
    <string name="cancel">Cancel</string>
    <string name="place_selection_cancelled_info_text">Place selection was cancelled by User.</string>
    <string name="api_conn_failed_error_text">Google API Connection failed!</string>

</resources>
